# thmanyah-churn

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff_errors.txt
configs/: config.yaml
models/: latest_model.txt  model_info.json
notebooks/: 01_data_exploration.ipynb
src/: api.py  churn_definition.py  config.py  data.py  feature_engineering.py  model.py  monitor_job.py  monitoring.py  retraining.py
