[project]
name = "thmanyah-churn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "xgboost>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.27",
    "mlflow>=2.10",
    "evidently>=0.4",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "imbalanced-learn>=0.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "pydantic>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
target-version = "py311"
extend-exclude = ["notebooks/**", ".venv/**", "mlruns/**", "models/**", "reports/**", "logs/**"]


[tool.black]
line-length = 88
target-version = ["py311"]